components/features/Landing/Hero/Hero.module.scss
.container {
  height: calc(100vh - 80px);
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}
.bg {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-image: url("/bg-top-1.png");
  background-position: right center;
  background-size: contain;
  background-repeat: no-repeat;
}
.heading {
  margin: 0;
  font-size: 42px;
  line-height: 1.15;
  letter-spacing: -0.8px;
  position: relative;
  top: -20px;
  opacity: 0;
  transition: all 0.2s cubic-bezier(0.1, 0.7, 1, 0.1);
  transition-delay: 0.65s;
  span {
    display: block;
  }
  .first {
    text-align: center;
    font-weight: 600;
    color: white;
  }
  .second {
    font-style: italic;
    font-weight: 800;
    color: #ffca10;
  }
  &.animateHeading {
    opacity: 1;
  }
}
.scrollBtn {
  position: absolute;
  bottom: 92px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;

  .text {
    color: #ffca10;
    line-height: 1;
    font-size: 16px;
    font-style: italic;
    letter-spacing: -1.333px;
  }
}
.ornament1,
.ornament2,
.ornament3,
.ornament4,
.ornament5,
.ornament6,
.ornament7 {
  position: absolute;
  transition: all 0.6s cubic-bezier(0, 0, 0.09, 0.99);
  transition-delay: 0.1s;
}
.ornament1 {
  top: 80px;
  left: 90px;
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 76.136px;
    height: unset;
  }
  &.animateOrnament1 {
    top: 0px;
    left: 32px;
    opacity: 1;
  }
}
.float {
  animation-name: Floating;
  animation-duration: 6s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  animation-delay: 0.9s;
}

@keyframes Floating {
  from {
    transform: translate(0, 0px);
  }
  65% {
    transform: translate(0, 20px);
  }
  to {
    transform: translate(0, -0px);
  }
}
.ornament2 {
  top: 80px;
  left: 45%;
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 100px;
    height: 100px;
  }
  &.animateOrnament2 {
    top: 0px;
    left: 50%;
    opacity: 1;
  }
}
.ornament3 {
  top: 90px;
  right: 60px;
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 225.284px;
    height: 184.255px;
    top: 150px;
  }
  &.animateOrnament3 {
    top: 32px;
    right: -90px;
    opacity: 1;
    @media screen and (min-height: 700px) {
      top: 50px;
      right: -60px;
    }
  }
}
.ornament4 {
  top: 120px;
  left: -0px;
  transform: scale(0.9);
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 240px;
    height: unset;
  }
  &.animateOrnament4 {
    top: 140px;
    left: -66px;
    opacity: 1;
  }
}
.ornamentfloat4 {
  animation-name: Floating4;
  animation-duration: 6s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  animation-delay: 0.9s;
}
@keyframes Floating4 {
  from {
    transform: scale(0.9) translate(0, 0px);
  }
  65% {
    transform: scale(0.9) translate(0, 20px);
  }
  to {
    transform: scale(0.9) translate(0, -0px);
  }
}
.ornament5 {
  right: 40px;
  bottom: 160px;
  transform: scale(0.9);
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 180px;
    height: unset;
  }
  &.animateOrnament5 {
    right: -28px;
    bottom: 84px;
    opacity: 1;
  }
}
.ornamentfloat5 {
  animation-name: Floating5;
  animation-duration: 6s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  animation-delay: 0.4s;
}
@keyframes Floating5 {
  from {
    transform: scale(0.9) translate(0, 0px);
  }
  65% {
    transform: scale(0.9) translate(0, 20px);
  }
  to {
    transform: scale(0.9) translate(0, -0px);
  }
}

.ornament6 {
  bottom: 240px;
  left: 40%;
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 73px;
    height: unset;
  }
  &.animateOrnament6 {
    bottom: 88px;
    left: 20%;
    opacity: 1;
  }
}
.ornament7 {
  bottom: 240px;
  left: 40px;
  opacity: 0;
  @media screen and (min-height: 700px) {
    width: 73px;
    height: unset;
  }
  &.animateOrnament7 {
    bottom: 160px;
    left: -12px;
    opacity: 1;
  }
}

